--- a/style.css
+++ b/style.css
@@ -2,4 +2,15 @@ body {
     background-color: rgb(179, 108, 220);
     color: rgb(255, 255, 255);
     font-family: "Frijole", system-ui;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    margin: 0;
+}
+
+button {
+    background-color: rgb(179, 108, 220);
+    color: rgb(255, 255, 255);
+    font-family: "Frijole", system-ui;
 }
