--- a/style.css
+++ b/style.css
@@ -14,3 +14,11 @@ button {
     color: rgb(255, 255, 255);
     font-family: "Frijole", system-ui;
 }
+
+.passo {
+    display: none;
+}
+
+.passo.ativo {
+    display: block;
+}
